Reverted IDAParser. Added localized string descriptions for new UI elements

--- a/IDAParser/IDAParser.csproj
+++ b/IDAParser/IDAParser.csproj
@@ -42,45 +42,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AICharacter.cs">
-      <Link>AICharacters\AICharacter.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AICharacterName.cs">
-      <Link>AICharacters\AICharacterName.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AICollection.cs">
-      <Link>AICharacters\AICollection.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AIHeader.cs">
-      <Link>AICharacters\AIHeader.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AIPersonality.cs">
-      <Link>AICharacters\AIPersonality.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\AIPersonalityFieldsEnum.cs">
-      <Link>AICharacters\AIPersonalityFieldsEnum.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\Buildings.cs">
-      <Link>AICharacters\PersonalityEnums\Buildings.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\Resources.cs">
-      <Link>AICharacters\PersonalityEnums\Resources.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\SiegeEngines.cs">
-      <Link>AICharacters\PersonalityEnums\SiegeEngines.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\TargetingType.cs">
-      <Link>AICharacters\PersonalityEnums\TargetingType.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\Units.cs">
-      <Link>AICharacters\PersonalityEnums\Units.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\PersonalityEnums\WorkshopSettings.cs">
-      <Link>AICharacters\PersonalityEnums\WorkshopSettings.cs</Link>
-    </Compile>
-    <Compile Include="..\UnofficialCrusaderPatch\AIC\Utils\RWAttributes.cs">
-      <Link>AICharacters\RWAttributes.cs</Link>
-    </Compile>
+    <Compile Include="AICharacters\AICCollection.cs" />
+    <Compile Include="AICharacters\AICharacter.cs" />
+    <Compile Include="AICharacters\AICIndex.cs" />
+    <Compile Include="AICharacters\AIFileHeader.cs" />
+    <Compile Include="AICharacters\AIPersonality.cs" />
+    <Compile Include="AICharacters\AIReader.cs" />
+    <Compile Include="AICharacters\AIWriter.cs" />
+    <Compile Include="AICharacters\PersonalityEnums\Buildings.cs" />
+    <Compile Include="AICharacters\PersonalityEnums\Resources.cs" />
+    <Compile Include="AICharacters\PersonalityEnums\SiegeEngines.cs" />
+    <Compile Include="AICharacters\PersonalityEnums\TargetingType.cs" />
+    <Compile Include="AICharacters\PersonalityEnums\Units.cs" />
+    <Compile Include="AICharacters\PersonalityEnums\WorkshopSettings.cs" />
+    <Compile Include="AICharacters\RWAttributes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
