added the chinese language

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -1516,5 +1516,8 @@
   <ItemGroup>
     <Resource Include="Graphics\shield.png" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Localization\Chinese.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
