Update built in jsons

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -652,10 +652,7 @@
     <EmbeddedResource Include="AIC\Resources\descriptions.json" />
     <EmbeddedResource Include="AIC\Resources\errors.json" />
     <EmbeddedResource Include="AIC\Resources\vanilla.json" />
-    <EmbeddedResource Include="AIC\Resources\Kimberly-Balance-v1.0.json" />
-    <EmbeddedResource Include="AIC\Resources\Krarilotus-aggressiveAI-v1.0.json" />
     <EmbeddedResource Include="AIC\Resources\Tatha 0.5.1.json" />
-    <EmbeddedResource Include="AIC\Resources\UCP-Bugfix.json" />
     <EmbeddedResource Include="AIC\Resources\Xander10alpha-v1.0.json" />
     <EmbeddedResource Include="..\SHC_AIV\firefly_fixed\Abbot1.aiv">
       <Link>AIV\EvreyFixed\Abbot1.aiv</Link>
@@ -1473,6 +1470,9 @@
     <EmbeddedResource Include="..\SHC_AIV\skirmish\wolf8.aiv">
       <Link>AIV\EvreyImproved\wolf8.aiv</Link>
     </EmbeddedResource>
+    <EmbeddedResource Include="AIC\Resources\Kimberly-Balance-v1.2.json" />
+    <EmbeddedResource Include="AIC\Resources\Krarilotus-aggressiveAI-v1.2.json" />
+    <EmbeddedResource Include="AIC\Resources\UCP-AI-Patch.json" />
     <None Include="App.config" />
     <EmbeddedResource Include="CodeBlocks\s_resource.block" />
     <EmbeddedResource Include="CodeBlocks\o_default_multiplayer_speed_reset.block" />
@@ -1503,6 +1503,7 @@
     </None>
     <EmbeddedResource Include="Startup\Resources\Troops\vanilla.json" />
     <EmbeddedResource Include="Startup\Resources\Goods\vanilla.json" />
+    <EmbeddedResource Include="Startup\Resources\Troops\UCP-StartingTroops-Patch.json" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
