--- a/UnofficialCrusaderPatch/AIC/Resources/Xander10alpha-Release-v1.3.json
+++ b/UnofficialCrusaderPatch/AIC/Resources/Xander10alpha-Release-v1.3.json
@@ -573,8 +573,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
   },
 	"AICharacters": [
 		{
-			"Description": "AICharacter",
-			"Index": 1,
+			"CustomName": "",
 			"Name": "Rat",
 			"Personality": {
 
@@ -750,8 +749,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 2,
+			"CustomName": "",
 			"Name": "Snake",
 			"Personality": {
 
@@ -927,8 +925,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 3,
+			"CustomName": "",
 			"Name": "Pig",
 			"Personality": {
 
@@ -1104,8 +1101,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 4,
+			"CustomName": "",
 			"Name": "Wolf",
 			"Personality": {
 
@@ -1281,8 +1277,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 5,
+			"CustomName": "",
 			"Name": "Saladin",
 			"Personality": {
 
@@ -1458,8 +1453,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 6,
+			"CustomName": "",
 			"Name": "Caliph",
 			"Personality": {
 
@@ -1635,8 +1629,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 7,
+			"CustomName": "",
 			"Name": "Sultan",
 			"Personality": {
 
@@ -1812,8 +1805,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 8,
+			"CustomName": "",
 			"Name": "Richard",
 			"Personality": {
 
@@ -1989,8 +1981,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 9,
+			"CustomName": "",
 			"Name": "Frederick",
 			"Personality": {
 
@@ -2166,8 +2157,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 10,
+			"CustomName": "",
 			"Name": "Phillip",
 			"Personality": {
 
@@ -2343,8 +2333,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 11,
+			"CustomName": "",
 			"Name": "Wazir",
 			"Personality": {
 
@@ -2520,8 +2509,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 12,
+			"CustomName": "",
 			"Name": "Emir",
 			"Personality": {
 
@@ -2697,8 +2685,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 13,
+			"CustomName": "",
 			"Name": "Nizar",
 			"Personality": {
 
@@ -2874,8 +2861,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 14,
+			"CustomName": "",
 			"Name": "Sheriff",
 			"Personality": {
 
@@ -3051,8 +3037,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 15,
+			"CustomName": "",
 			"Name": "Marshal",
 			"Personality": {
 
@@ -3228,8 +3213,7 @@ Celem jest usprawnienie botów, aby były dla gracza jak największym wyzwaniem.
 			}
 		},
 		{
-			"Description": "AICharacter",
-			"Index": 16,
+			"CustomName": "",
 			"Name": "Abbot",
 			"Personality": {
 
