feature/change_separate_changes_to_files
[*] Separated changes from Version to their own classes.

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -89,6 +89,44 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Localization\Localization.cs" />
     <Compile Include="Localization\TextReferencer.cs" />
+    <Compile Include="Mods\Mod.cs" />
+    <Compile Include="Mods\Mod_Change_AI_AddAttack.cs" />
+    <Compile Include="Mods\Mod_Change_AI_AttackLimit.cs" />
+    <Compile Include="Mods\Mod_Change_AI_AttackTarget.cs" />
+    <Compile Include="Mods\Mod_Change_AI_AttackWave.cs" />
+    <Compile Include="Mods\Mod_Change_AI_Demolish.cs" />
+    <Compile Include="Mods\Mod_Change_AI_NoSleep.cs" />
+    <Compile Include="Mods\Mod_Change_AI_Overclock.cs" />
+    <Compile Include="Mods\Mod_Change_AI_RecruitInterval.cs" />
+    <Compile Include="Mods\Mod_Change_Other_AlwaysShowPlannedMoat.cs" />
+    <Compile Include="Mods\Mod_Change_Other_ArmoryMarketplaceWeaponOrderFix.cs" />
+    <Compile Include="Mods\Mod_Change_Other_DefaultMultiplayerSpeed.cs" />
+    <Compile Include="Mods\Mod_Change_Other_ExtendedGameSpeed.cs" />
+    <Compile Include="Mods\Mod_Change_Other_FireCooldown.cs" />
+    <Compile Include="Mods\Mod_Change_Other_FreeTradePost.cs" />
+    <Compile Include="Mods\Mod_Change_Other_Healer.cs" />
+    <Compile Include="Mods\Mod_Change_Other_NewKeybindings.cs" />
+    <Compile Include="Mods\Mod_Change_Other_NoSiegeTentDeselection.cs" />
+    <Compile Include="Mods\Mod_Change_Other_OnlyAI.cs" />
+    <Compile Include="Mods\Mod_Change_Other_OverrideIdentityMenu.cs" />
+    <Compile Include="Mods\Mod_Change_Other_PlayerColorChange.cs" />
+    <Compile Include="Mods\Mod_Change_Other_RemoveExtremeBar.cs" />
+    <Compile Include="Mods\Mod_Change_Other_ResponsiveGates.cs" />
+    <Compile Include="Mods\Mod_Change_Other_Strongholdify.cs" />
+    <Compile Include="Mods\Mod_Change_Units_ArabianArcher.cs" />
+    <Compile Include="Mods\Mod_Change_Units_ArabianSwordsmen.cs" />
+    <Compile Include="Mods\Mod_Change_Units_Laddermen.cs" />
+    <Compile Include="Mods\Mod_Change_Units_Spearmen.cs" />
+    <Compile Include="Mods\Mod_Fix_AI_Access.cs" />
+    <Compile Include="Mods\Mod_Fix_AI_AssaultSwitch.cs" />
+    <Compile Include="Mods\Mod_Fix_AI_Buy.cs" />
+    <Compile Include="Mods\Mod_Fix_AI_BuyWood.cs" />
+    <Compile Include="Mods\Mod_Fix_AI_Defense.cs" />
+    <Compile Include="Mods\Mod_Fix_AI_LaddermenUsage.cs" />
+    <Compile Include="Mods\Mod_Fix_AI_Rebuild.cs" />
+    <Compile Include="Mods\Mod_Fix_AI_Tethers.cs" />
+    <Compile Include="Mods\Mod_Fix_AI_TowerEngines.cs" />
+    <Compile Include="Mods\Mod_Fix_FireBallista.cs" />
     <Compile Include="Patching\BinElements\BinCode.cs" />
     <Compile Include="Patching\BinElements\BinCollection.cs" />
     <Compile Include="Patching\BinElements\Referencers\BinAddress.cs" />
